--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <h2>It's ok, we all get emojional.</h2>
       <p class="prompt">How are you feeling today?</p>
       <button class="happy" onclick='happyClick()'>😁</button>
-      <button class="silly">🤪</button>
-      <button class="crying">😭</button>
+      <button class="silly" onclick='sillyClick()'>🤪</button>
+      <button class="crying" onclick='sadClick()'>😭</button>
       <p class="message"></p>
     </section>
     <script type="text/javascript" src="./index.js"></script>
